--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
         <link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
-        <section>
+        <section class="navsec">
             <nav class="top">
+                <div class="navitemsi">
+                    <img src="./img/genericlogo.png">
+                </div>
                 <div class="navitemsa">
-                    <h3>Services</h3>
-                    <h3>Products</h3>
-                    <h3>Resources</h3>
-                    <h3>Blog</h3>
-                    <h3>About Us</h3>
-                    <h3>Contact Us</h3>
+                    <a href="">Blog</a>
+                    <a href="google.com" target="_blank">Services</a>
+                    <a href="">Products</a>
+                    <a href="">Resources</a>
+                    <a href="">About Us</a>
+                    <a href="">Contact Us</a>
                 </div>
             </nav>
-            <div id="navbackg">
+            <img id="navbackg" src="./img/genericnavbackg.png"></img> 
 
-            </div> 
+            <div class="maininfo">
+                <h1>Welcome to VFB Technical Solutions!</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem velit quam impedit? Nisi nesciunt rem distinctio maiores quae nobis, assumenda vel. Repellendus aperiam, veniam odio voluptatum mollitia expedita consequuntur nemo.</p>
+                <button>Learn More</button>
+            </div>
         </section>
+
+        <section>
+        </section>
+        <div class="spacer"></div>
 
     </body>
 </html>
