--- a/index.html
+++ b/index.html
@@ -1,35 +1,129 @@
-<!DOCTYPE html>
+
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <link rel="stylesheet" href="./css/index.css">
-    </head>
-    <body>
-        <section class="navsec">
-            <nav class="top">
-                <div class="navitemsi">
-                    <img src="./img/genericlogo.png">
-                </div>
-                <div class="navitemsa">
-                    <a href="">Blog</a>
-                    <a href="google.com" target="_blank">Services</a>
-                    <a href="">Products</a>
-                    <a href="">Resources</a>
-                    <a href="">About Us</a>
-                    <a href="">Contact Us</a>
-                </div>
-            </nav>
-            <img id="navbackg" src="./img/genericnavbackg.png"></img> 
+	<head>
+		<title>VFB Technical Solutions - Application Delivery Experts</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload landing">
+		<div id="page-wrapper">
 
-            <div class="maininfo">
-                <h1>Welcome to VFB Technical Solutions!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem velit quam impedit? Nisi nesciunt rem distinctio maiores quae nobis, assumenda vel. Repellendus aperiam, veniam odio voluptatum mollitia expedita consequuntur nemo.</p>
-                <button>Learn More</button>
-            </div>
-        </section>
+			<!-- Header -->
+				<header id="header">
+					<h1 id="logo"><a href="index.html">VFB Technical Solutions</a></h1>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li>
+								<a href="#">Services</a>
+								<ul>
+									<li><a href="load-balancing.html">Load Balancing Solutions</a></li>
+									<li><a href="cloud-architecture.html">Cloud Architecture</a></li>
+									<li><a href="automation.html">Automation & Orchestration</a></li>
+									<li><a href="security.html">App & API Security</a></li>
+								</ul>
+							</li>
+							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="#" class="button primary">Sign Up</a></li>
+						</ul>
+					</nav>
+				</header>
 
-        <section>
-        </section>
-        <div class="spacer"></div>
+			<!-- Banner -->
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h2>Architecting the Future of Application Delivery</h2>
+							<p>We specialize in delivering scalable, secure, and reliable applications across any infrastructure.<br />
+							Partner with us to elevate your environment with expert load balancing and application security solutions.</p>
+						</header>
+						<span class="image"><img src="images/pic01.jpg" alt="Application Delivery" /></span>
+					</div>
+					<a href="#one" class="goto-next scrolly">Learn More</a>
+				</section>
 
-    </body>
+			<!-- One -->
+				<section id="one" class="spotlight style1 bottom">
+					<span class="image fit main"><img src="images/pic02.jpg" alt="Technical Expertise" /></span>
+					<div class="content">
+						<div class="container">
+							<div class="row">
+								<div class="col-4 col-12-medium">
+									<header>
+										<h2>Application Delivery & Load Balancing Engineering</h2>
+										<p>Our solutions ensure maximum availability and performance for critical applications.</p>
+									</header>
+								</div>
+								<div class="col-4 col-12-medium">
+									<p>At VFB Technical Solutions, we offer expert services in Application Delivery Network (ADN) architecture. We work with top vendors like F5 Networks, VMware, Citrix NetScaler, Cisco, AVI Networks, A10 Networks, and Brocade to provide tailored solutions for your enterprise.</p>
+								</div>
+								<div class="col-4 col-12-medium">
+									<p>Our team specializes in load balancing, ensuring your applications are always available, regardless of traffic demand. Whether it's global traffic management or securing API traffic, we design and scale infrastructure with flexibility and security in mind.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a href="#two" class="goto-next scrolly">Discover More</a>
+				</section>
+
+			<!-- Two -->
+				<section id="two" class="spotlight style2 right">
+					<span class="image fit main"><img src="images/pic03.jpg" alt="Cloud Architecture" /></span>
+					<div class="content">
+						<header>
+							<h2>Cloud Migration & Hybrid Solutions</h2>
+							<p>Let us help you design the ideal cloud architecture for your business needs.</p>
+						</header>
+						<p>We specialize in designing cloud environments that integrate seamlessly with your existing infrastructure. From fully cloud-native solutions on Azure or AWS, to hybrid setups, we ensure your applications run optimally in any environment.</p>
+						<ul class="actions">
+							<li><a href="cloud-architecture.html" class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<a href="#three" class="goto-next scrolly">Next</a>
+				</section>
+
+			<!-- Three -->
+				<section id="three" class="spotlight style3 left">
+					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="Automation & Orchestration" /></span>
+					<div class="content">
+						<header>
+							<h2>Automation, Orchestration, & Monitoring</h2>
+							<p>Streamline your operations with automated workflows and continuous monitoring.</p>
+						</header>
+						<p>We implement infrastructure automation and orchestration solutions using tools like Ansible, Terraform, and F5 iRules. From setting up CI/CD pipelines to automating load balancing configurations, we reduce manual efforts, minimize errors, and enhance application reliability.</p>
+						<ul class="actions">
+							<li><a href="automation.html" class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<a href="#four" class="goto-next scrolly">Next</a>
+				</section>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; VFB Technical Solutions. All rights reserved.</li>
+					</ul>
+				</footer>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
